# VICE_emu

android-port/: .descr
branches/fabrizio/v1.22.13-newjoydesign/vice/src/joystickdrv/: Makefile  Makefile.am  Makefile.in  joy_allegro.c  joy_directinput.c  joy_unix.c  joy_unix_digi_old.c  joy_unix_old.c  joy_winmm.c
branches/marco/msvc-project-generation/vice/src/arch/win32/vs6/: Makefile.am  arch.dsp  base.dsp  c128.dsp  c1541.dsp  c64.dsp  c64c128.dsp  c64c64dtv.dsp  c64cart.dsp  c64cartsystem.dsp  c64commoncart.dsp  c64dtv.dsp  c64dtvstubs.dsp  c64exp.dsp  cbm2.dsp  cbm5x0.dsp  crtc.dsp  drive.dsp  fsdevice.dsp  geninfocontrib.dsp  genmsvcver.dsp  gentranslate.dsp  genwinres.dsp  gfxoutputdrv.dsp  iec.dsp  iecieee.dsp  monitor.dsp  parallel.dsp  pet.dsp  plus4.dsp  plus4exp.dsp  raster.dsp  residdtv.dsp  rs232drv.dsp  serial.dsp  tcbm.dsp  vdrive.dsp  vic20cart.dsp  vicii.dsp  viciisc.dsp  (+10 more)
branches/skoe/monitor-split/src/monitor/: Makefile.am  genparser.sh  mon_asm6502_lex.l  mon_asm6502_parse.y  mon_breakpoint.h  mon_lex.c  mon_lex.l  mon_parse.c  mon_parse.h  mon_parse.y  mon_parsers.h  mon_util.c  mon_util.h  monitor.c  montypes.h
branches/viceplus/v2.0.1-sdl/vice/src/arch/sdl/: Makefile.am  Makefile.in  archdep.c  archdep.h  fullscreen.c  joy.c  joy.h  kbd.c  kbd.h  menu_c64cart.c  menu_common.c  menu_drive.c  menu_help.c  menu_help.h  menu_reset.c  menu_reset.h  menu_settings.c  menu_settings.h  menu_snapshot.h  menu_sound.c  menu_speed.c  menu_speed.h  menu_vic20cart.c  menu_vic20cart.h  menu_video.c  menu_video.h  menu_video_c128.c  menu_video_c128.h  menu_video_c64.h  menu_video_c64dtv.c  menu_video_c64dtv.h  menu_video_cbm2.c  menu_video_pet.c  menu_video_plus4.c  menu_video_plus4.h  menu_video_vic20.c  menu_video_vic20.h  mousedrv.c  rs232.c  sdlmain.c  (+20 more)
branches/viceplus/v2.1.11-x64dtv/vice/src/viciidtv/: Makefile.am  viciidtv-badline.c  viciidtv-cycle.c  viciidtv-draw.c  viciidtv-fetch.c  viciidtv-fetch.h  viciidtv-irq.c  viciidtv-irq.h  viciidtv-mem.c  viciidtv-mem.h  viciidtv-phi1.c  viciidtv-snapshot.c  viciidtv-sprites.c  viciidtv-sprites.h  viciidtv.c  viciidtvtypes.h
driveupdate/: configure.in
driveupdate/src/drive/iec/: Makefile.am  cia1581d.c  iec.c  pc8477.h  via1d1541.c  via4000.c  wd1770.c  wd1770.h
msvc-project-generation/vice/src/arch/win32/vs11/: Makefile.am  arch.vcxproj  base.vcxproj  c128.vcxproj  c1541.vcxproj  c64.vcxproj  c64c128.vcxproj  c64c64dtv.vcxproj  c64cart.vcxproj  c64cartsystem.vcxproj  c64commoncart.vcxproj  c64dtv.vcxproj  c64exp.vcxproj  c64scpu64.vcxproj  cartconv.vcxproj  cbm2.vcxproj  cbm2common.vcxproj  cbm5x0.vcxproj  core.vcxproj  crtc.vcxproj  diskimage.vcxproj  drive.vcxproj  fileio.vcxproj  fsdevice.vcxproj  genmsvcver.vcxproj  gfxoutputdrv.vcxproj  iec.vcxproj  iec128dcr.vcxproj  iecbus.vcxproj  iecieee.vcxproj  ieee.vcxproj  imagecontents.vcxproj  monitor.vcxproj  pet.vcxproj  petcat.vcxproj  platform.vcxproj  plus4exp.vcxproj  resid.vcxproj  residfp.vcxproj  rtc.vcxproj  (+20 more)
msvc-project-generation/vice/src/arch/win32/vs6/: Makefile.am  arch.dsp  c1541.dsp  c64.dsp  c64c64dtv.dsp  c64cart.dsp  c64dtvstubs.dsp  c64sc.dsp  c64scpu64.dsp  cartconv.dsp  cbm2.dsp  cbm2common.dsp  core.dsp  diskimage.dsp  fileio.dsp  fsdevice.dsp  genmsvcver.dsp  gentranslate.dsp  genwinres.dsp  iec.dsp  iec128dcr.dsp  iecbus.dsp  imagecontents.dsp  monitor.dsp  p64.dsp  petcat.dsp  platform.dsp  printerdrv.dsp  residfp.dsp  scpu64.dsp  sid.dsp  tape.dsp  userport.dsp  vic20.dsp  vice.dsw  video.dsp  vsidlib.dsp  x128.dsp  x64.dsp  x64dtv.dsp  (+5 more)
msvc-project-generation/vice/src/arch/win32/vs_tmpl/: Makefile.am  c128.tmpl  c1541.tmpl  c64.tmpl  c64c128.tmpl  c64c64dtv.tmpl  c64cart.tmpl  c64commoncart.tmpl  c64dtv.tmpl  c64dtvstubs.tmpl  c64exp.tmpl  c64sc.tmpl  cartconv.tmpl  cbm2.tmpl  cbm5x0.tmpl  drive.tmpl  fileio.tmpl  geninfocontrib.tmpl  genmsvcver.tmpl  genwinres.tmpl  gfxoutputdrv.tmpl  iec.tmpl  iec128dcr.tmpl  iecbus.tmpl  ieee.dsp  ieee.tmpl  imagecontents.tmpl  mkmsvc.c  monitor.tmpl  p64.dsp  p64.tmpl  pet.tmpl  petcat.tmpl  platform.tmpl  plus4.tmpl  plus4exp.tmpl  printerdrv.tmpl  raster.tmpl  rtc.dsp  scpu64.tmpl  (+20 more)
testprogs/: readme.txt
v2.0.1-sdl/vice/src/arch/sdl/: Makefile.am  Makefile.in  archdep.c  joy.c  joy.h  kbd.c  kbd.h  menu_c64cart.c  menu_c64cart.h  menu_common.c  menu_common.h  menu_drive.c  menu_drive.h  menu_help.c  menu_plus4cart.c  menu_plus4cart.h  menu_reset.c  menu_screenshot.c  menu_screenshot.h  menu_settings.c  menu_snapshot.c  menu_sound.c  menu_sound.h  menu_speed.c  menu_speed.h  menu_video.c  menu_video_c128.c  menu_video_c64.c  menu_video_c64dtv.c  menu_video_cbm2.c  menu_video_cbm2.h  menu_video_pet.h  menu_video_plus4.c  menu_video_vic20.c  signals.c  ui.c  ui.h  uic128.c  uic64.c  uic64dtv.c  (+14 more)
v2.1-imageselector/: ChangeLog
v2.1-sdl/vice/src/arch/sdl/: Makefile.am  archdep.c  archdep.h  archdep_amiga.c  archdep_unix.c  archdep_win32.c  archdep_win32.h  blockdev.c  console.c  fullscreen.c  joy.c  joy.h  kbd.c  make-bindist_beos.sh  make-bindist_riscos.sh  menu_c128_rom.c  menu_c128_rom.h  menu_c128cart.c  menu_c128hw.c  menu_c64_common_expansions.c  menu_c64cart.c  menu_c64cart.h  menu_c64cart_common.c  menu_c64dtvhw.c  menu_c64hw.c  menu_cbm2hw.c  menu_common.c  menu_common.h  menu_drive.c  menu_joystick.c  menu_mouse.c  menu_petcart.c  menu_pethw.c  menu_plus4cart.c  menu_plus4hw.c  menu_rom.c  menu_screenshot.c  menu_settings.c  menu_sid.c  menu_sid.h  (+37 more)
v2.1.15-tracing/vice/src/tracer/: Makefile.am  traceaction.c  traceaction.h  traceprobe.c  traceprobe.h  tracer.c  traceserver.c  traceserver.h
v2.4.9-ffmpeg/vice/src/lib/: Makefile.am
v2.4.9-ffmpeg/vice/src/lib/archives/: Makefile.am  avconfig.h
v2.4.9-ffmpeg/vice/src/lib/libffmpeg/: Makefile.am
x64/: Contact_Information.htm  Copyright.htm  Features.htm  GNU_General_Public_License.htm  Introduction.htm  VICE Manual.chw  Whats_New.htm  x64 - Commodore 64.htm  x64-main-edit-menu.htm  x64-main-file-menu.htm  x64-main-help-menu.htm  x64-main-language-menu.htm  x64-main-menu.htm  x64-main-options-menu.htm  x64.chm  x64.wcp  (+2 more)
(+6816 files in other folders)
