INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/monitor

noinst_LIBRARIES = libtracer.a

noinst_HEADERS = \
	tracer.h \
	traceaction.h \
	traceprobe.h \
	traceserver.h

libtracer_a_SOURCES = \
	tracer.c \
	traceaction.c \
	traceprobe.c \
	traceserver.c

