# Makefile.am for the SDL version of `libarch.a'.

INCLUDES = \
	@ARCH_INCLUDES@ \
	@FFMPEG_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/c64 \
	-I$(top_srcdir)/src/c64dtv \
	-I$(top_srcdir)/src/c128 \
	-I$(top_srcdir)/src/vic20 \
	-I$(top_srcdir)/src/pet \
	-I$(top_srcdir)/src/cbm2 \
	-I$(top_srcdir)/src/plus4 \
	-I$(top_srcdir)/src/raster \
	-I$(top_srcdir)/src/sid \
	-I$(top_srcdir)/src

noinst_LIBRARIES = libarch.a

libarch_a_SOURCES = \
	archdep.c \
	archdep.h \
	blockdev.c \
	console.c \
	fullscreen.c \
	fullscreenarch.h \
	joy.c \
	joy.h \
	kbd.c \
	kbd.h \
	menu_c64cart.c \
	menu_c64cart.h \
	menu_c64dtvhw.c \
	menu_c64dtvhw.h \
	menu_c64hw.c \
	menu_c64hw.h \
	menu_common.c \
	menu_common.h \
	menu_drive.c \
	menu_drive.h \
	menu_help.c \
	menu_help.h \
	menu_joystick.c \
	menu_joystick.h \
	menu_mouse.c \
	menu_mouse.h \
	menu_plus4cart.c \
	menu_plus4cart.h \
	menu_reset.c \
	menu_reset.h \
	menu_screenshot.c \
	menu_screenshot.h \
	menu_settings.c \
	menu_settings.h \
	menu_sid.c \
	menu_sid.h \
	menu_snapshot.c \
	menu_snapshot.h \
	menu_sound.c \
	menu_sound.h \
	menu_speed.c \
	menu_speed.h \
	menu_tape.c \
	menu_tape.h \
	menu_vic20cart.c \
	menu_vic20cart.h \
	menu_video.c \
	menu_video.h \
	mousedrv.c \
	mousedrv.h \
	sdlmain.c \
	signals.c \
	types.h \
	ui.c \
	ui.h \
	uic128.c \
	uic64.c \
	uic64dtv.c \
	uicbm2.c \
	uicmdline.c \
	uifilereq.c \
	uifilereq.h \
	uihotkey.c \
	uihotkey.h \
	uimenu.c \
	uimenu.h \
	uimon.c \
	uimsgbox.c \
	uimsgbox.h \
	uipet.c \
	uiplus4.c \
	uivic20.c \
	video.c \
	videoarch.h \
	vkbd.c \
	vkbd.h \
	vsidui.c \
	vsyncarch.c
