INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/raster \
	-I$(top_srcdir)/src/c64 \
	-I$(top_srcdir)/src/c64dtv

noinst_LIBRARIES = libviciidtv.a

libviciidtv_a_SOURCES = \
	viciidtv-badline.c \
	viciidtv-badline.h \
	viciidtv-cmdline-options.c \
	viciidtv-cmdline-options.h \
	viciidtv-color.c \
	viciidtv-color.h \
	viciidtv-cycle.c \
	viciidtv-draw.c \
	viciidtv-draw.h \
	viciidtv-fetch.c \
	viciidtv-fetch.h \
	viciidtv-irq.c \
	viciidtv-irq.h \
	viciidtv-mem.c \
	viciidtv-mem.h \
	viciidtv-phi1.c \
	viciidtv-phi1.h \
	viciidtv-resources.c \
	viciidtv-resources.h \
	viciidtv-snapshot.c \
	viciidtv-snapshot.h \
	viciidtv-sprites.c \
	viciidtv-sprites.h \
	viciidtv-timing.c \
	viciidtv-timing.h \
	viciidtv.c \
	viciidtvtypes.h
