EXTRA_DIST = \
	_vice.vcxproj \
	arch.vcxproj \
	base.vcxproj \
	c128.vcxproj \
	c1541.vcxproj \
	c64.vcxproj \
	c64c128.vcxproj \
	c64c64dtv.vcxproj \
	c64cart.vcxproj \
	c64cartsystem.vcxproj \
	c64commoncart.vcxproj \
	c64dtv.vcxproj \
	c64dtvstubs.vcxproj \
	c64exp.vcxproj \
	c64sc.vcxproj \
	c64scpu64.vcxproj \
	cartconv.vcxproj \
	cbm2.vcxproj \
	cbm2common.vcxproj \
	cbm5x0.vcxproj \
	core.vcxproj \
	crtc.vcxproj \
	diskimage.vcxproj \
	drive.vcxproj \
	fileio.vcxproj \
	fsdevice.vcxproj \
	geninfocontrib.vcxproj \
	genmsvcver.vcxproj \
	gentranslate.vcxproj \
	genwinres.vcxproj \
	gfxoutputdrv.vcxproj \
	iec.vcxproj \
	iec128dcr.vcxproj \
	iecbus.vcxproj \
	iecieee.vcxproj \
	ieee.vcxproj \
	imagecontents.vcxproj \
	make-msvc-bindist.bat \
	monitor.vcxproj \
	p64.vcxproj \
	parallel.vcxproj \
	pet.vcxproj \
	petcat.vcxproj \
	platform.vcxproj \
	plus4.vcxproj \
	plus4exp.vcxproj \
	printerdrv.vcxproj \
	raster.vcxproj \
	resid.vcxproj \
	residdtv.vcxproj \
	residfp.vcxproj \
	rs232drv.vcxproj \
	rtc.vcxproj \
	scpu64.vcxproj \
	serial.vcxproj \
	sid.vcxproj \
	sounddrv.vcxproj \
	tape.vcxproj \
	tcbm.vcxproj \
	userport.vcxproj \
	vdc.vcxproj \
	vdrive.vcxproj \
	vic20.vcxproj \
	vic20cart.vcxproj \
	vice.sln \
	vicii.vcxproj \
	viciidtv.vcxproj \
	viciisc.vcxproj \
	video.vcxproj \
	vsid.vcxproj \
	vsidlib.vcxproj \
	winid_ia64.bat \
	winid_x64.bat \
	winid_x86.bat \
	x128.vcxproj \
	x64.vcxproj \
	x64dtv.vcxproj \
	x64sc.vcxproj \
	xcbm2.vcxproj \
	xcbm5x0.vcxproj \
	xpet.vcxproj \
	xplus4.vcxproj \
	xscpu64.vcxproj \
	xvic.vcxproj
