EXTRA_DIST = \
	_vice.dsp \
	arch.dsp \
	base.dsp \
	c128.dsp \
	c1541.dsp \
	c64.dsp \
	c64c128.dsp \
	c64c64dtv.dsp \
	c64cart.dsp \
	c64cartsystem.dsp \
	c64commoncart.dsp \
	c64dtv.dsp \
	c64dtvstubs.dsp \
	c64exp.dsp \
	c64sc.dsp \
	c64scpu64.dsp \
	cartconv.dsp \
	cbm2.dsp \
	cbm2common.dsp \
	cbm5x0.dsp \
	core.dsp \
	crtc.dsp \
	diskimage.dsp \
	drive.dsp \
	fileio.dsp \
	fsdevice.dsp \
	geninfocontrib.dsp \
	genmsvcver.dsp \
	gentranslate.dsp \
	genwinres.dsp \
	gfxoutputdrv.dsp \
	iec.dsp \
	iec128dcr.dsp \
	iecbus.dsp \
	iecieee.dsp \
	ieee.dsp \
	imagecontents.dsp \
	monitor.dsp \
	p64.dsp \
	parallel.dsp \
	pet.dsp \
	petcat.dsp \
	platform.dsp \
	plus4.dsp \
	plus4exp.dsp \
	printerdrv.dsp \
	raster.dsp \
	resid.dsp \
	residdtv.dsp \
	residfp.dsp \
	rs232drv.dsp \
	rtc.dsp \
	scpu64.dsp \
	serial.dsp \
	sid.dsp \
	sounddrv.dsp \
	tape.dsp \
	tcbm.dsp \
	userport.dsp \
	vdc.dsp \
	vdrive.dsp \
	vic20.dsp \
	vic20cart.dsp \
	vicii.dsp \
	viciidtv.dsp \
	viciisc.dsp \
	video.dsp \
	vsid.dsp
