EXTRA_DIST = \
	_vice.dsp \
	arch.tmpl \
	base.tmpl \
	c128.tmpl \
	c1541.tmpl \
	c64.tmpl \
	c64c128.tmpl \
	c64c64dtv.tmpl \
	c64cart.tmpl \
	c64cartsystem.tmpl \
	c64commoncart.tmpl \
	c64dtv.tmpl \
	c64dtvstubs.tmpl \
	c64exp.tmpl \
	c64sc.tmpl \
	c64scpu64.tmpl \
	cartconv.tmpl \
	cbm2.tmpl \
	cbm2common.tmpl \
	cbm5x0.tmpl \
	core.tmpl \
	crtc.tmpl \
	diskimage.tmpl \
	drive.tmpl \
	fileio.tmpl \
	fsdevice.tmpl \
	geninfocontrib.tmpl \
	genmsvcver.tmpl \
	gentranslate.tmpl \
	genwinres.tmpl \
	gfxoutputdrv.tmpl \
	iec.tmpl \
	iec128dcr.tmpl \
	iecbus.tmpl \
	iecieee.tmpl \
	ieee.dsp \
	imagecontents.dsp \
	monitor.dsp \
	p64.dsp \
	parallel.dsp \
	pet.dsp \
	petcat.dsp \
	platform.dsp \
	plus4.dsp \
	plus4exp.dsp \
	printerdrv.dsp \
	raster.dsp \
	resid.dsp \
	residdtv.dsp \
	residfp.dsp \
	rs232drv.dsp \
	rtc.dsp \
	scpu64.dsp \
	serial.dsp \
	sid.dsp \
	sounddrv.dsp \
	tape.dsp \
	tcbm.dsp \
	userport.dsp \
	vdc.dsp \
	vdrive.dsp \
	vic20.dsp \
	vic20cart.dsp \
	vice.dsw \
	vicii.dsp \
	viciidtv.dsp \
	viciisc.dsp \
	video.dsp \
	vsid.dsp \
	vsidlib.dsp \
	x128.dsp \
	x64.dsp \
	x64dtv.dsp \
	x64sc.dsp \
	xcbm2.dsp \
	xcbm5x0.dsp \
	xpet.dsp \
	xplus4.dsp \
	xscpu64.dsp \
	xvic.dsp
