EXTRA_DIST = \
	_vice.dsp \
	arch.dsp \
	base.dsp \
	c128.dsp \
	c1541.dsp \
	c64.dsp \
	c64c128.dsp \
	c64c64dtv.dsp \
	c64cart.dsp \
	c64cartsystem.dsp \
	c64commoncart.dsp \
	c64dtv.dsp \
	c64dtvstubs.dsp \
	c64exp.dsp \
	c64sc.dsp \
	c64scpu64.dsp \
	cartconv.dsp \
	cbm2.dsp \
	cbm2common.dsp \
	cbm5x0.dsp \
	core.dsp \
	crtc.dsp \
	diskimage.dsp \
	drive.dsp \
	fileio.dsp \
	fsdevice.dsp \
	geninfocontrib.dsp \
	genmsvcver.dsp \
	gentranslate.dsp \
	genwinres.dsp
